--- a/web/pages/admin/adminCourseMange.html
+++ b/web/pages/admin/adminCourseMange.html
@@ -5,7 +5,7 @@
             <div class="card-body">
                 <h2 class="display-3">课程管理</h2>
                 <div class="d-flex justify-content-end align-items-end flex-wrap">
-                    <a href="/admin/addCourse">
+                    <a href="/admin/editCourse">
                         <button class="btn btn-primary mt-2 mt-xl-0">
                             新增课程
                         </button>
