--- a/web/pages/admin/adminBase.html
+++ b/web/pages/admin/adminBase.html
@@ -90,21 +90,20 @@
                         <span class="menu-title">课程管理</span>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">-->
 
-                        <i class="mdi mdi-home menu-icon"></i>
-                        <span class="menu-title">宿舍管理</span>
-                        <i class="menu-arrow"></i>
-                    </a>
-                    <div class="collapse" id="auth">
-                        <ul class="nav flex-column sub-menu">
-                            <li class="nav-item"><a class="nav-link" href="pages/samples/login.html">宿舍信息管理</a></li>
-                            <li class="nav-item"><a class="nav-link" href="pages/samples/login-2.html">宿舍人员管理</a></li>
-                        </ul>
-                    </div>
-                </li>
-
+<!--                        <i class="mdi mdi-home menu-icon"></i>-->
+<!--                        <span class="menu-title">宿舍管理</span>-->
+<!--                        <i class="menu-arrow"></i>-->
+<!--                    </a>-->
+<!--                    <div class="collapse" id="auth">-->
+<!--                        <ul class="nav flex-column sub-menu">-->
+<!--                            <li class="nav-item"><a class="nav-link" href="pages/samples/login.html">宿舍信息管理</a></li>-->
+<!--                            <li class="nav-item"><a class="nav-link" href="pages/samples/login-2.html">宿舍人员管理</a></li>-->
+<!--                        </ul>-->
+<!--                    </div>-->
+<!--                </li>-->
                 <li class="nav-item">
                     <a class="nav-link" href="pages/icons/mdi.html">
                         <i class="mdi mdi-file-document-box-outline menu-icon"></i>
