--- a/web/pages/student/studentBase.html
+++ b/web/pages/student/studentBase.html
@@ -103,7 +103,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/icons/mdi.html">
+                    <a class="nav-link" href="、student/askLeave">
                         <i class="mdi mdi-emoticon menu-icon"></i>
                         <span class="menu-title">请假管理</span>
                     </a>
