--- a/web/pages/admin/adminEditTeacher.html
+++ b/web/pages/admin/adminEditTeacher.html
@@ -12,7 +12,7 @@
                         <label for="exampleInputUsername2" class="col-sm-3 col-form-label">姓名</label>
                         <div class="col-sm-9">
                             <input type="text" class="form-control" id="exampleInputUsername2" placeholder="用户姓名"
-                                   value="{{.name}}" name="name">
+                                   value="{{.tname}}" name="tname">
                         </div>
                     </div>
                     <div class="form-group row">
