--- a/web/pages/admin/adminMain.html
+++ b/web/pages/admin/adminMain.html
@@ -5,7 +5,10 @@
             <div class="card-body">
                 <h2 class="display-3">在校学生管理</h2>
                 <div class="d-flex justify-content-end align-items-end flex-wrap">
-                    <button class="btn btn-primary mt-2 mt-xl-0">新增学生</button>
+                    <a href="/admin/editStudent">
+                        <button class="btn btn-primary mt-2 mt-xl-0">新增学生</button>
+                    </a>
+
                 </div>
                 <div class="table-responsive pt-3">
                     <table class="table table-bordered">
