--- a/web/pages/student/studentConfirmMange.html
+++ b/web/pages/student/studentConfirmMange.html
@@ -37,7 +37,7 @@
                             {{else}}
                             <td><label class="badge badge-success">尚未考勤</label></td>
                             <td>
-                                <button type="button" class="btn btn-outline-primary btn-fw">
+                                <button type="button" class="btn btn-outline-primary btn-fw" disabled>
                                     前往考勤
                                 </button>
                             </td>
