--- a/web/pages/admin/adminBase.html
+++ b/web/pages/admin/adminBase.html
@@ -46,10 +46,10 @@
                         <span class="nav-profile-name">{{.name}}</span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-                        <a class="dropdown-item">
-                            <i class="mdi mdi-settings text-primary"></i>
-                            我的信息
-                        </a>
+<!--                        <a class="dropdown-item" href="#">-->
+<!--                            <i class="mdi mdi-settings text-primary"></i>-->
+<!--                            我的信息-->
+<!--                        </a>-->
                         <a class="dropdown-item" href="/logout">
                             <i class="mdi mdi-logout text-primary"></i>
                             登出系统
@@ -79,7 +79,7 @@
                         <ul class="nav flex-column sub-menu">
                             <li class="nav-item"><a class="nav-link" href="/admin/main">学生管理</a></li>
                             <li class="nav-item"><a class="nav-link" href="/admin/teacherMange">教师管理</a>
-                            <li class="nav-item"><a class="nav-link" href="pages/ui-features/typography.html">管理员管理</a>
+                            <li class="nav-item"><a class="nav-link" href="/admin/adminMange">管理员管理</a>
                             </li>
                         </ul>
                     </div>
@@ -105,7 +105,7 @@
 <!--                    </div>-->
 <!--                </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/icons/mdi.html">
+                    <a class="nav-link" href="/admin/askLeaveMange">
                         <i class="mdi mdi-file-document-box-outline menu-icon"></i>
                         <span class="menu-title">请假管理</span>
                     </a>
