--- a/web/pages/admin/adminEditAdmin.html
+++ b/web/pages/admin/adminEditAdmin.html
@@ -3,16 +3,16 @@
     <div class="content-wrapper">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">教师信息</h4>
+                <h4 class="card-title">管理员信息</h4>
                 <p class="card-description">
-                    编辑教师
+                    编辑管理员
                 </p>
-                <form class="forms-sample" action="/admin/pushTeacher" method="post">
+                <form class="forms-sample" action="/admin/pushAdmin" method="post">
                     <div class="form-group row">
                         <label for="exampleInputUsername2" class="col-sm-3 col-form-label">姓名</label>
                         <div class="col-sm-9">
                             <input type="text" class="form-control" id="exampleInputUsername2" placeholder="用户姓名"
-                                   value="{{.name}}" name="name">
+                                   value="{{.aname}}" name="aname">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -22,7 +22,7 @@
                                    value="{{.email}}" name="email">
                         </div>
                     </div>
-                    <input type="hidden" class="form-control" id="exampleInputMobile" name="tid" value="{{.tid}}">
+                    <input type="hidden" class="form-control" id="exampleInputMobile" name="aid" value="{{.aid}}">
                     <div class="form-group row">
                         <label for="exampleInputPassword2" class="col-sm-3 col-form-label">密码</label>
                         <div class="col-sm-9">
