--- a/web/pages/admin/adminEditCourse.html
+++ b/web/pages/admin/adminEditCourse.html
@@ -12,29 +12,22 @@
                         <label for="exampleInputUsername2" class="col-sm-3 col-form-label">课程名</label>
                         <div class="col-sm-9">
                             <input type="text" class="form-control" id="exampleInputUsername2" placeholder="课程名称"
-                                   value="{{.CName}}" name="name">
+                                   value="{{.cname}}" name="cname" >
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="exampleInputEmail2" class="col-sm-3 col-form-label">课程简介</label>
                         <div class="col-sm-9">
                             <input type="text" class="form-control" id="exampleInputEmail2" placeholder="课程简介"
-                                   value="{{.CAbstract}}" name="abstract">
+                                   value="{{.abstract}}" name="abstract">
                         </div>
                     </div>
-                    <input type="hidden" class="form-control" id="exampleInputMobile" name="tid" value="{{.KID}}">
+                    <input type="hidden" class="form-control" id="exampleInputMobile" name="kid" value="{{.kid}}">
                     <div class="form-group row">
                         <label for="exampleInputPassword2" class="col-sm-3 col-form-label">任课教师邮箱</label>
                         <div class="col-sm-9">
                             <input type="text" class="form-control" id="exampleInputPassword2" placeholder="任课教师邮箱地址"
                                    value="{{.email}}" name="email">
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="exampleInputPassword2" class="col-sm-3 col-form-label">任课教师姓名</label>
-                        <div class="col-sm-9">
-                            <input type="text" class="form-control" id="exampleInputPassword3" placeholder="任课教师姓名"
-                                   value="" name="teacher_name" readonly="readonly">
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary mr-2">保存</button>
