--- a/web/pages/admin/adminEditStudent.html
+++ b/web/pages/admin/adminEditStudent.html
@@ -3,33 +3,90 @@
     <div class="content-wrapper">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">管理员信息</h4>
+                <h4 class="card-title">学生信息</h4>
                 <p class="card-description">
-                    编辑管理员
+                    编辑学生
                 </p>
-                <form class="forms-sample" action="/admin/pushAdmin" method="post">
-                    <div class="form-group row">
-                        <label for="exampleInputUsername2" class="col-sm-3 col-form-label">姓名</label>
-                        <div class="col-sm-9">
-                            <input type="text" class="form-control" id="exampleInputUsername2" placeholder="用户姓名"
-                                   value="{{.name}}" name="name">
+                <form class="form-sample" action="/admin/pushStudent" method="post">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">姓名</label>
+                                <div class="col-sm-9">
+                                    <input type="text" class="form-control" name="sname" placeholder="姓名"
+                                           value="{{.sname}}">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">班级</label>
+                                <div class="col-sm-9">
+                                    <input type="text" class="form-control" name="class" placeholder="班级"
+                                           value="{{.class}}">
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="form-group row">
-                        <label for="exampleInputEmail2" class="col-sm-3 col-form-label">邮箱地址</label>
-                        <div class="col-sm-9">
-                            <input type="email" class="form-control" id="exampleInputEmail2" placeholder="用户邮箱"
-                                   value="{{.email}}" name="email">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">性别</label>
+                                <div class="col-sm-9">
+                                    <select class="form-control" name="gender">
+                                        {{if eq .gender "0"}}
+                                        <option value="1">男</option>
+                                        <option value="0" selected>女</option>
+                                        {{else}}
+                                        <option value="1" selected>男</option>
+                                        <option value="0">女</option>
+                                        {{end}}
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">年龄</label>
+                                <div class="col-sm-9">
+                                    <input type="text" class="form-control" name="age" placeholder="年龄"
+                                           value="{{.age}}">
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <input type="hidden" class="form-control" id="exampleInputMobile" name="aid" value="{{.aid}}">
-                    <div class="form-group row">
-                        <label for="exampleInputPassword2" class="col-sm-3 col-form-label">密码</label>
-                        <div class="col-sm-9">
-                            <input type="password" class="form-control" id="exampleInputPassword2" placeholder="用户密码"
-                                   value="{{.password}}" name="password">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">电子邮箱</label>
+                                <div class="col-sm-9">
+                                    <input type="text" class="form-control" name="email" placeholder="电子邮箱"
+                                           value="{{.email}}">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">密码</label>
+                                <div class="col-sm-9">
+                                    <input type="password" class="form-control" name="password" placeholder="密码"
+                                           value="{{.password}}">
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">联系方式</label>
+                                <div class="col-sm-9">
+                                    <input type="text" class="form-control" name="phone" placeholder="联系方式"
+                                           value="{{.phone}}">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <input type="hidden" name="uid" value="{{.uid}}">
                     <button type="submit" class="btn btn-primary mr-2">保存</button>
                     <button type="reset" class="btn btn-light">取消</button>
                 </form>
