--- a/web/pages/student/studentBase.html
+++ b/web/pages/student/studentBase.html
@@ -16,7 +16,7 @@
     <!-- inject:css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- endinject -->
-    <link rel="shortcut icon" href="images/favicon.png"/>
+    <link rel="shortcut icon" href="images/logo-mini.svg"/>
     <style>
         .toast:not(.show) {
             display: none;
@@ -47,7 +47,7 @@
                         <span class="nav-profile-name">{{.name}}</span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-                        <a class="dropdown-item">
+                        <a class="dropdown-item" href="/student/viewInfo">
                             <i class="mdi mdi-settings text-primary"></i>
                             我的信息
                         </a>
@@ -103,7 +103,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="、student/askLeave">
+                    <a class="nav-link" href="/student/askLeave">
                         <i class="mdi mdi-emoticon menu-icon"></i>
                         <span class="menu-title">请假管理</span>
                     </a>
