--- a/web/pages/teacher/teacherBase.html
+++ b/web/pages/teacher/teacherBase.html
@@ -46,10 +46,10 @@
                         <span class="nav-profile-name">{{.name}}</span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-                        <a class="dropdown-item">
-                            <i class="mdi mdi-settings text-primary"></i>
-                            我的信息
-                        </a>
+<!--                        <a class="dropdown-item">-->
+<!--                            <i class="mdi mdi-settings text-primary"></i>-->
+<!--                            我的信息-->
+<!--                        </a>-->
                         <a class="dropdown-item" href="/logout">
                             <i class="mdi mdi-logout text-primary"></i>
                             登出系统
